# tcg_server_experiments

./: Cargo.toml
auth_provider/: Cargo.toml  schema.sql
auth_provider/src/: database.rs  lib.rs  main.rs  provider.rs
auth_provider/src/database/: models.rs
auth_provider/src/provider/: discord.rs
matchmaking/: Cargo.toml
matchmaking/src/: auth.rs  lib.rs  main.rs  matchmaker.rs
matchmaking/src/auth/: providers.rs
