[package]
name = "auth_provider"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.6", features = ["original-uri"] }
axum-extra = { version = "0.9.4", features = ["cookie"] }
dashmap = "6.1.0"
futures = "0.3.30"
http = "1.1.0"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "time"] }
thiserror = "1.0.64"
time = { version = "0.3.36", features = ["serde", "serde-well-known"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
