[package]
name = "matchmaking"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.6", features = ["ws"] }
dashmap = "6.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
